@@ -5,7 +5,7 @@ pkgname=pjecalc-instalador
 pkgver=$(date +%y.%m.%d)
 pkgrel=$(date +%H%M)
 arch=('any')
-license=('GPL')
+license=('MIT')
 url="https://github.com/tuxslack/pjecalc-instalador"
 pkgdesc="Extract and execute Pjecalc in Linux"
 depends=('jre11-openjdk' 'p7zip' 'yad' 'firefox' 'noto-fonts-emoji')
